<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="yes">@android:string/yes</string>


    <string name="app_name">Audible TTS</string>
    <string name="app_name_version">Audible TTS</string>
    <string name="about">About</string>
    <string name="end_of_the_reading">end of the reading</string>
    <string name="toggle_detect_lang">detect language</string>
    <string name="setup">setup</string>
    <string name="toggle_extra">extra</string>
    <string name="toggle_seek_by_phrase">seek by frase</string>
    <string name="toggle_auto">auto</string>
    <string name="lang_prompt_doc">Document Language</string>
    <string name="lang_prompt_par">Paragraph Language</string>
    <string name="toggle_advance">advance articles</string>
    <string name="locknow_description">Audible needs this admin permission to lock the screen.</string>
    <string name="locknow_explanation">The application couldn\'t be able to lock the screen without this administrator permit.</string>
    <string name="toggle_volume">Volume</string>
    <string name="notify_keep_ticker">Audible Quick Starter</string>
    <string name="notify_keep_text">Helps for a quick start</string>
    <string name="advanced_quick_start">Quick Start</string>
    <string name="advanced_early_save">Early Save</string>
    <string name="advanced_early_save_on">title and body will be saved as early as possible</string>
    <string name="advanced_early_save_off">title and body will be saved only at normal exit</string>

    <string name="preferences_title_optimization">optimization</string>
    <string name="preferences_reading_lowercase_title">LowerCase</string>
    <string name="preferences_reading_lowercase_summary_on">text will be lowercased before been read</string>
    <string name="preferences_reading_lowercase_summary_off">text will be read has it is</string>
    <string name="preferences_ignore_title">Ignore</string>
    <string name="preferences_ignore_summary">Characters and Texts that will be ignored while reading</string>
    <string name="preferences_ignore_title_title">Ignore title</string>
    <string name="preferences_ignore_repeated_title_title">Ignore repeated title</string>
    <string name="preferences_ignore_repeated_title_summary_on">title will be ignored if repeated at the beginning of text</string>
    <string name="preferences_ignore_repeated_title_summary_off">title will be read normally</string>
    <string name="preferences_ignore_parentheses_title">Ignore ()</string>
    <string name="preferences_ignore_parentheses_summary_on">parentheses () will be ignored</string>
    <string name="preferences_ignore_parentheses_summary_off">parentheses () will be read</string>
    <string name="preferences_ignore_squarebrackets_title">Ignore []</string>
    <string name="preferences_ignore_squarebrackets_summary_on">squarebrackets [] will be ignored</string>
    <string name="preferences_ignore_squarebrackets_summary_off">squarebrackets [] will be read</string>
    <string name="preferences_ignore_curlybrackets_title">Ignore {}</string>
    <string name="preferences_ignore_curlybrackets_summry_on">curlybrackets {} will be ignored</string>
    <string name="preferences_ignore_curlybrackets_summry_off">curlybrackets {} will be read</string>
    <string name="preferences_ignore_pipe_title">Ignore |</string>
    <string name="preferences_ignore_pipe_summary_on">pipes \'|\' will be ignored for reading</string>
    <string name="preferences_ignore_pipe_summary_off">pipes \'|\' will be read</string>
    <string name="preferences_ignore_underscore_title">Ignore _</string>
    <string name="preferences_ignore_underscore_summary_on">underscores _ will be ignored</string>
    <string name="preferences_ignore_underscore_summary_off">underscores _ will be read</string>
    <string name="preferences_ignore_hyphens_title">Ignore --</string>
    <string name="preferences_ignore_hyphens_summary">ignore hyphens -- (two or more) while reading</string>
    <string name="preferences_ignore_asterisk_title">Ignore *</string>
    <string name="preferences_ignore_asterisk_summary">ignore asterisks \'*\' while reading</string>
    <string name="preferences_ignore_ampersand_title">Ignore &amp;</string>
    <string name="preferences_ignore_ampersand_summary">ignore ampersand \'&amp;\' while reading</string>

    <string name="preferences_auto_title">auto</string>
    <string name="preferences_auto_auto_title">Auto</string>
    <string name="preferences_auto_auto_summary_on">following actions are enabled</string>
    <string name="preferences_auto_auto_summary_off">following actions are disabled</string>
    <string name="preferences_auto_play_title">Play</string>
    <string name="preferences_auto_play_summary_on">Automatic play is enabled</string>
    <string name="preferences_auto_play_summary_off">Automatic play is disabled</string>
    <string name="preferences_auto_exit_title">Exit</string>
    <string name="preferences_auto_exit_summary_on">Automatic exit is enabled</string>
    <string name="preferences_auto_exit_summary_off">Automatic exit is disabled</string>
    <string name="preferences_auto_screenlock_title">Screen Lock</string>
    <string name="preferences_auto_screenlock_summary_on">Automatic screen lock is enabled</string>
    <string name="preferences_auto_screenlock_summary_off">Automatic screen lock is disabled</string>
    <string name="preferences_language_category">language</string>
    <string name="preferences_reading_category">reading</string>
    <string name="preferences_language_detect_title">Detect</string>
    <string name="preferences_language_detect_summary_on">detect language for the text</string>
    <string name="preferences_language_detect_summary_off">ignore text language</string>
    <string name="preferences_language_default_title">Default</string>
    <string name="preferences_language_default_summary">%s will be used as Default Language</string>
    <string name="preferences_language_avaliable_title">Available Languages</string>
    <string name="preferences_language_avaliable_summary">Languages that would be avaliable for detection</string>
    <string name="preferences_language_gender_title">Gender</string>
    <string name="preferences_language_gender_summary">%s gender will be used when present</string>
    <string name="preferences_ui_category">user interface</string>
    <string name="preferences_ui_theme_title">Theme</string>
    <string name="preferences_ui_theme_summary">user interface theme is %s</string>
    <string name="preferences_ui_fontfamily_title">Font Family</string>
    <string name="preferences_ui_fontfamily_summary">Font Family is %s</string>
    <string name="preferences_ui_fontsize_title">Font Size</string>
    <string name="preferences_ui_fontsize_summary">Size of Font is %s</string>
    <string name="preferences_ui_fontbold_title">Bold Style</string>
    <string name="preferences_ui_fontbold_summary_on">style is Bold</string>
    <string name="preferences_ui_fontbold_summary_off">style is Normal</string>
    <string name="preferences_ui_toasts_title">Toasts</string>
    <string name="preferences_ui_toasts_summary_on">toasts notifications are enabled</string>
    <string name="preferences_ui_toasts_summary_off">toasts notifications are disabled</string>
    <string name="preferences_ui_progress_title">Progress Bar</string>
    <string name="preferences_ui_progress_summary">progress bar is shown</string>
    <string name="preferences_ui_progress_summary_off">progress bar is hide</string>
    <string name="preferences_ui_progress_volume_title">Volume</string>
    <string name="preferences_ui_progress_volume_summary_on">progress bar is shown</string>
    <string name="preferences_ui_progress_volume_off">volume bar is hide</string>
    <string name="preferences_optimize_keeps_title">Quick Start</string>
    <string name="preferences_optimize_keeps_summary">Quick Start will be keept in memory for %s</string>
    <string name="preferences_advanced">advanced (developers only)</string>
    <string name="preferences_about">about</string>
    <string name="preferences_about_title">About Audible</string>
    <string name="activity_preference_label">Preferences</string>
    <string name="preferences_language_early_detect_title">Detect Early</string>
    <string name="preferences_language_early_detect_summary_on">allow language detection using partial initialization</string>
    <string name="preferences_language_early_detect_summary_off">language detection waits for full initialization</string>
    <string name="choose_text_file_with">Choose text file with...</string>
    <string name="choose_send_with">Send content with...</string>
    <string name="resolve_view">View content with...</string>
    <string name="preferences_ui_join_lines_title">Join Lines</string>
    <string name="preferences_ui_join_lines_summary">join lines of every paragraph</string>
    <string name="main_menu_help_title">Help</string>
    <string name="main_menu_about_title">About</string>
    <string name="main_menu_rotate_title">Rotate</string>
    <string name="main_menu_settings_title">Settings</string>
    <string name="help">Help</string>

    <string name="no_enabled_languages_title">No enabled languages</string>
    <string name="no_enabled_languages_text">%s. Enable now?</string>
    <string name="no_enabled_languages_toast" formatted="false">%s. Enable using %s</string>
    <string name="preferences_ui_orientation_title">Orientation</string>
    <string name="preferences_ui_orientation_summary">orientation for the main screen (%s)</string>
</resources>
