<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:id="@+id/main_toggle_pannel">
    <ToggleButton android:id="@+id/toggle_extra"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:checked="false"
                  android:textOn="@string/toggle_extra"
                  android:textOff="@string/toggle_extra"
                  android:textSize="9dp" android:textStyle="bold"/>
    <ToggleButton android:id="@+id/toggle_advance"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:checked="false"
                  android:textOn="@string/toggle_advance"
                  android:textOff="@string/toggle_advance"
                  android:textSize="9dp" android:textStyle="bold"
                  android:enabled="false"/>
    <ToggleButton android:id="@+id/toggle_volume"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:checked="false"
                  android:textOn="@string/toggle_volume"
                  android:textOff="@string/toggle_volume"
                  android:textSize="9dp" android:textStyle="bold"/>
    <ToggleButton android:id="@+id/toggle_detect_lang"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:checked="false"
                  android:textOn="@string/toggle_detect_lang"
                  android:textOff="@string/toggle_detect_lang"
                  android:textSize="9dp" android:textStyle="bold"
                  android:enabled="true"/>
    <ToggleButton android:id="@+id/toggle_phrase"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:textOn="@string/toggle_seek_by_phrase"
                  android:textOff="@string/toggle_seek_by_phrase"
                  android:textSize="9dp" android:textStyle="bold"/>
    <ToggleButton android:id="@+id/toggle_auto"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:checked="false"
                  android:textOn="@string/toggle_auto"
                  android:textOff="@string/toggle_auto"
                  android:textSize="9dp" android:textStyle="bold"/>
</LinearLayout>